--- a/Android/app/src/main/res/layout/activity_my_calendar.xml
+++ b/Android/app/src/main/res/layout/activity_my_calendar.xml
@@ -6,29 +6,18 @@
     android:layout_height="match_parent"
     tools:context="baseballRecruitment.jd.MyCalendar">
 
-    <Button
-        android:id="@+id/calendar_add_new"
-        style="@android:style/Widget.Button.Inset"
-        android:layout_width="wrap_content"
+    <WebView
+        android:id="@+id/webcal"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+    />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/new_meeting"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_dark"
-        android:text="Add New"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:typeface="monospace"
-        android:onClick="new_meeting"
+        android:layout_width="wrap_content"
+        android:layout_margin="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
-
-    <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/calendar_add_new"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"/>
+        android:src="@drawable/ic_add_black_24dp"
+    />
 </android.support.constraint.ConstraintLayout>
