tournaments button on homepage

--- a/Android/app/src/main/res/layout/activity_home_page.xml
+++ b/Android/app/src/main/res/layout/activity_home_page.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="baseballRecruitment.jd.HomePage"
-    app:layout_constraintVertical_bias="0.79">
+    app:layout_constraintVertical_bias="0.79"
+    tools:context="baseballRecruitment.jd.HomePage">
 
     <TextView
         android:id="@+id/home_page_title"
@@ -16,9 +16,9 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:typeface="monospace"
+        app:layout_constraintBottom_toTopOf="@+id/my_calendar_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/my_calendar_button"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.55" />
 
@@ -29,12 +29,12 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="415dp"
         android:background="@android:color/holo_blue_dark"
+        android:onClick="mycalendar"
         android:text="My Calendar"
         android:textAlignment="center"
         android:textSize="16sp"
         android:textStyle="bold"
         android:typeface="monospace"
-        android:onClick="mycalendar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
@@ -45,11 +45,11 @@
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:background="@android:color/holo_blue_dark"
+        android:onClick="watchlist"
         android:text="My Watchlist"
         android:textSize="16sp"
         android:textStyle="bold"
         android:typeface="monospace"
-        android:onClick="watchlist"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -62,11 +62,11 @@
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:background="@android:color/holo_blue_dark"
+        android:onClick="top50"
         android:text="Top 50"
         android:textSize="16sp"
         android:textStyle="bold"
         android:typeface="monospace"
-        android:onClick="top50"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -79,14 +79,32 @@
         android:layout_width="368dp"
         android:layout_height="48dp"
         android:background="@android:color/holo_blue_dark"
+        android:onClick="map"
         android:text="Map"
         android:textSize="16sp"
         android:textStyle="bold"
         android:typeface="monospace"
-        android:onClick="map"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top_50_button"
         app:layout_constraintVertical_bias="0.144" />
+
+    <Button
+        android:id="@+id/tournaments_button"
+        style="@android:style/Widget.Button.Inset"
+        android:layout_width="363dp"
+        android:layout_height="46dp"
+        android:background="@android:color/holo_blue_dark"
+        android:fontFamily="monospace"
+        android:text="Tournaments"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:typeface="monospace"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.523"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/map_button"
+        app:layout_constraintVertical_bias="0.195" />
 </android.support.constraint.ConstraintLayout>
