trying to link button

--- a/Android/app/src/main/res/layout/activity_home_page.xml
+++ b/Android/app/src/main/res/layout/activity_home_page.xml
@@ -97,6 +97,7 @@
         android:layout_height="46dp"
         android:background="@android:color/holo_blue_dark"
         android:fontFamily="monospace"
+        android:onClick="tournaments"
         android:text="Tournaments"
         android:textSize="18sp"
         android:textStyle="bold"
